--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Página de teste</title>
 </head>
 <body>
+    <h1>Página HTML do curso JAVASCRIPT</h1>
+    <h3>Aulas:</h3>
     <a href="aula1/index.html">Aula 01</a>
 </body>
 </html>
