--- a/aula1/index.html
+++ b/aula1/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script type="text/javascript" src="js/aula.js"></script>
 
-    <title>Document</title>
+    <title>Aula 1</title>
 </head>
 <body>
     
