--- a/aula1/index.html
+++ b/aula1/index.html
@@ -9,6 +9,7 @@
     <title>Aula 1</title>
 </head>
 <body>
-    
+    <div id="area">Altere esse texto</div>
+    <button onclick="trocarDiv()">Fazer a ação</button>
 </body>
 </html>
