--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Página HTML do curso JAVASCRIPT</h1>
     <h3>Aulas:</h3>
-    <a href="aula1/index.html">Aula 01</a>
+    <a href="aula1-criando-funcoes/">Aula 01</a>
 </body>
 </html>
