criando a segunda aula

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Página HTML do curso JAVASCRIPT</h1>
     <h3>Aulas:</h3>
-    <a href="aula1-criando-funcoes/index.html">Aula 01</a>
+    <a href="aula1-criando-funcoes/index.html">Criando Funções</a><br>
+    <a href="modificando-uma-lista/index.html">Modificando Uma Lista</a>
 </body>
 </html>
