--- a/modificando-uma-lista/index.html
+++ b/modificando-uma-lista/index.html
@@ -9,6 +9,10 @@
     <title>Modificando uma lista</title>
 </head>
 <body>
-
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
 </body>
 </html>
