--- a/modificando-uma-lista/index.html
+++ b/modificando-uma-lista/index.html
@@ -9,7 +9,10 @@
     <title>Modificando uma lista</title>
 </head>
 <body>
-    <ul>
+    <h3>Ingredientes do bolo</h3>
+    <input type="text" id="ingredientes">
+    <button onclick="adicionarIngredientes()">Adcionar</button><br><br>
+    <ul id="lista">
         <li>Item 1</li>
         <li>Item 2</li>
         <li>Item 3</li>
