--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Página HTML do curso JAVASCRIPT</h1>
     <h3>Aulas:</h3>
     <a href="aula1-criando-funcoes/index.html">Criando Funções</a><br>
-    <a href="aula2-modificando-uma-lista/index.html">Modificando Uma Lista</a>
+    <a href="aula2-modificando-uma-lista/index.html">Modificando Uma Lista</a><br>
+    <a href="aula3-operacoes/index.html">Operações</a>
 </body>
 </html>
