--- a/aula3-operacoes/index.html
+++ b/aula3-operacoes/index.html
@@ -9,6 +9,11 @@
     <title>Operações</title>
 </head>
 <body>
-
+    <input type="text" name="campo1" id="campo1"> +
+    <input type="text" name="campo2" id="campo2">
+    <button onclick="somar()">Somar</button><br><br>
+    <input type="text" name="campo3" id="campo3"> -
+    <input type="text" name="campo4" id="campo4">
+    <button onclick="diminuir()">Diminuir</button>
 </body>
 </html>
