--- a/aula3-operacoes/index.html
+++ b/aula3-operacoes/index.html
@@ -9,11 +9,20 @@
     <title>Operações</title>
 </head>
 <body>
-    <input type="text" name="campo1" id="campo1"> +
-    <input type="text" name="campo2" id="campo2">
+    <input type="number" name="campo1" id="campo1"> +
+    <input type="number" name="campo2" id="campo2">
     <button onclick="somar()">Somar</button><br><br>
-    <input type="text" name="campo3" id="campo3"> -
-    <input type="text" name="campo4" id="campo4">
-    <button onclick="diminuir()">Diminuir</button>
+
+    <input type="number" name="campo3" id="campo3"> -
+    <input type="number" name="campo4" id="campo4">
+    <button onclick="diminuir()">Diminuir</button><br><br>
+
+    <input type="number" name="campo5" id="campo5"> *
+    <input type="number" name="campo6" id="campo6">
+    <button onclick="multiplicar()">Multiplicar</button><br><br>
+
+    <input type="number" name="campo7" id="campo7"> /
+    <input type="number" name="campo8" id="campo8">
+    <button onclick="dividir()">Dividir</button><br><br>
 </body>
 </html>
