--- a/aula3-operacoes/index.html
+++ b/aula3-operacoes/index.html
@@ -9,20 +9,24 @@
     <title>Operações</title>
 </head>
 <body>
-    <input type="number" name="campo1" id="campo1"> +
-    <input type="number" name="campo2" id="campo2">
-    <button onclick="somar()">Somar</button><br><br>
+    <input type="number" name="campo1" id="campo1" placeholder="Digite valores"> +
+    <input type="number" name="campo2" id="campo2" placeholder="Digite valores">
+    <button onclick="somar()">Somar</button>
+    <h2 id="valor">Valor:0</h2>
 
-    <input type="number" name="campo3" id="campo3"> -
-    <input type="number" name="campo4" id="campo4">
-    <button onclick="diminuir()">Diminuir</button><br><br>
+    <input type="number" name="campo3" id="campo3" placeholder="Digite valores"> -
+    <input type="number" name="campo4" id="campo4" placeholder="Digite valores">
+    <button onclick="diminuir()">Diminuir</button>
+    <h2 id="valor2">Valor:0</h2>
 
-    <input type="number" name="campo5" id="campo5"> *
-    <input type="number" name="campo6" id="campo6">
-    <button onclick="multiplicar()">Multiplicar</button><br><br>
+    <input type="number" name="campo5" id="campo5" placeholder="Digite valores"> *
+    <input type="number" name="campo6" id="campo6" placeholder="Digite valores">
+    <button onclick="multiplicar()">Multiplicar</button>
+    <h2 id="valor3">Valor:0</h2>
 
-    <input type="number" name="campo7" id="campo7"> /
-    <input type="number" name="campo8" id="campo8">
-    <button onclick="dividir()">Dividir</button><br><br>
+    <input type="number" name="campo7" id="campo7" placeholder="Digite valores"> /
+    <input type="number" name="campo8" id="campo8" placeholder="Digite valores">
+    <button onclick="dividir()">Dividir</button>
+    <h2 id="valor4">Valor:0</h2>
 </body>
 </html>
