--- a/aula3-operacoes/index.html
+++ b/aula3-operacoes/index.html
@@ -5,28 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script type="text/javascript" src="js/aula.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <title>Operações</title>
 </head>
 <body>
-    <input type="number" name="campo1" id="campo1" placeholder="Digite valores"> +
-    <input type="number" name="campo2" id="campo2" placeholder="Digite valores">
-    <button onclick="somar()">Somar</button>
-    <h2 id="valor">Valor:0</h2>
+    <div class="container">
+        <div class="margin">
+            <input type="number" name="campo1" id="campo1" placeholder="Digite valores"> +
+            <input type="number" name="campo2" id="campo2" placeholder="Digite valores">
+            <button onclick="somar()">Somar</button>
+            <h2 id="valor">Valor:0</h2>
 
-    <input type="number" name="campo3" id="campo3" placeholder="Digite valores"> -
-    <input type="number" name="campo4" id="campo4" placeholder="Digite valores">
-    <button onclick="diminuir()">Diminuir</button>
-    <h2 id="valor2">Valor:0</h2>
+            <input type="number" name="campo3" id="campo3" placeholder="Digite valores"> -
+            <input type="number" name="campo4" id="campo4" placeholder="Digite valores">
+            <button onclick="diminuir()">Diminuir</button>
+            <h2 id="valor2">Valor:0</h2>
 
-    <input type="number" name="campo5" id="campo5" placeholder="Digite valores"> *
-    <input type="number" name="campo6" id="campo6" placeholder="Digite valores">
-    <button onclick="multiplicar()">Multiplicar</button>
-    <h2 id="valor3">Valor:0</h2>
+            <input type="number" name="campo5" id="campo5" placeholder="Digite valores"> *
+            <input type="number" name="campo6" id="campo6" placeholder="Digite valores">
+            <button onclick="multiplicar()">Multiplicar</button>
+            <h2 id="valor3">Valor:0</h2>
 
-    <input type="number" name="campo7" id="campo7" placeholder="Digite valores"> /
-    <input type="number" name="campo8" id="campo8" placeholder="Digite valores">
-    <button onclick="dividir()">Dividir</button>
-    <h2 id="valor4">Valor:0</h2>
+            <input type="number" name="campo7" id="campo7" placeholder="Digite valores"> /
+            <input type="number" name="campo8" id="campo8" placeholder="Digite valores">
+            <button onclick="dividir()">Dividir</button>
+            <h2 id="valor4">Valor:0</h2>
+        </div>
+    </div>
 </body>
 </html>
