--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h3>Aulas:</h3>
     <a href="aula1-criando-funcoes/index.html">Criando Funções</a><br>
     <a href="aula2-modificando-uma-lista/index.html">Modificando Uma Lista</a><br>
-    <a href="aula3-operacoes/index.html">Operações</a>
+    <a href="aula3-operacoes/index.html">Operações</a><br>
+    <a href="aula4-advinhe-o-numero/index.html">Joguinho Advinhe o Número</a>
 </body>
 </html>
