finalizando pequenos detalhes

--- a/aula4-advinhe-o-numero/index.html
+++ b/aula4-advinhe-o-numero/index.html
@@ -9,7 +9,8 @@
 
     <title>Advinhe</title>
 </head>
-<body onload="resetar()">
+<body onload="resetar(),resetarLetra()">
+    <h1>Brincando com letras e números</h1>
     <div id="n1">0</div>
     <input type="number" id="n2" maxlength="2">
     <div style="clear:both"></div>
